# toggle-nic

./: .azure-pipelines.yml  CMakeLists.txt  DevicesHandler.cpp  DevicesHandler.h  LICENSE  README.md  WinUtils.cpp  WinUtils.h  main.cpp
.ci/: artifacts-steps.yml  msvc.yml
resources/: toggle-nic.rc.in
